--- a/static/styles.css
+++ b/static/styles.css
@@ -13,14 +13,14 @@
 	--primary-table-border-radius: 1rem;
 	--primary-transparent-color: linear-gradient(90deg, #f2f5ff 40%, rgba(255, 255, 255, 0) 100%);
 	--primary-transparent-color-after: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #f2f5ff 50%);
-	--primary-transparent-color-2: rgba(0,100,200, 0.9);
+	--primary-transparent-color-2: rgba(0, 100, 200, 0.9);
 }
 
 body {
 	background-color: var(--primary-background-color);
 }
 
-.dark{
+.dark {
 	--primary-accent-color: #ff0000;
 	--primary-background-color: #F0F0F0;
 	--primary-accent-color-btn: #000000;
@@ -70,4 +70,45 @@ p {
 	}
 }
 
+@media (max-width: 875px) {
+	body:has(#search:checked) label[for="check"] {
+		display: none;
+	}
 
+	body:has(#search:checked) #search-box {
+		margin-left: 0 !important;
+		border-radius: 0 0 0 0 !important;
+	}
+
+	body:has(#search:checked) #search-closed {
+		border-radius: 0 0 0 0 !important;
+	}
+
+	body:has(#search:checked) .model {
+		height: 100vh !important;
+		width: 100% !important;
+		left: 0 !important;
+		border-radius: 0 !important;
+		margin-left: 0 !important;
+	}
+
+	body:has(#search:checked) #sidebar {
+		left: -250px;
+	}
+
+	body:has(#search:checked) .search-bar {
+		margin-left: 0;
+		padding-left: 50px;
+	}
+
+	body:has(#search:checked) #search-bar {
+		width: 100% !important;
+	}
+
+	body:has(#search:checked) .search-input {
+		padding: 0 3.5rem 0 1.5rem !important;
+		flex-grow: 1 !important;
+		border-radius: 0;
+	}
+
+}
