update famillie overview

--- a/static/styles.css
+++ b/static/styles.css
@@ -112,3 +112,11 @@ p {
 	}
 
 }
+
+body:has(#checky:checked) .wrapper-layout {
+	display: none !important;
+}
+
+body:has(#test:checked) .wrapper-layout {
+	display: block;
+}
